Update Jenkinsfile 7